fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,11 @@ body {
 }
   .background {
     padding:50px 25px;
+    padding-top: 15px!important;
     background-image: url(../img/coin.jpg);
     background-size: cover;
+    width: 100%;
+    height: 580px;
   }
   #flip, #reset-stats {
       letter-spacing:1px;
@@ -142,7 +145,6 @@ body {
     border-color:rgba(255, 183, 0);
 }
 #notification {
-    margin-top:10px;
     font-size:1.50em;
     color:rgba(68,67,73,1);
     opacity:0;
@@ -153,8 +155,10 @@ body {
     color:rgb(0, 0, 0);
     display:block;
 }
-  /* -- Media Queries -- */
-  @media screen and (max-width:1200px) {
-      body { padding-bottom:50px; }
-      #reset-stats { font-size:2.5em; padding: 25px 50px; }
+.backtwo {
+    padding:50px 25px;
+    padding-top: 0px !important;
+    background-size: cover;
+    width: 100%;
+    height: 150px;
   }
